appliex flexbox to skill-display to fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ h2 {
 
 h4 {
   font-family: var(--title);
-  padding: 5px;
+  padding: 1rem;
   text-transform: uppercase;
   font-weight: 500;
   font-size: 3rem;
@@ -265,30 +265,28 @@ h3 {
   margin: 1.5rem;
 }
 
-  #skills-box ul {
-  font-family: var(--text);
-  font-size: 1.5rem;
-  list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
-  grid-gap: 5%;
-  }
+#skill-display{
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-evenly;
+}
 
-  #skills-box ul li{
-  display: grid;
-  justify-self: center;
-  }
+#skill{
+  padding: 2%;
+  flex-grow: 1;
+  flex-basis: 25%;
+  display: flex;
+  flex-direction: column;
+}
 
-  #skills-box ul li i{
-  font-size: 3rem;
-  justify-self: center;
-  }
+#skill i{
+  font-size: 3.5rem;
+  text-align: center;
+}
 
-  #bio{
-    text-align: right;
-    padding-right: 1rem;
-  }
+#skill p{
+  text-align: center;
+}
 
 /******* BIO ******/
   #bio-box{
